# Experiments

./: PANEL_API_IMPLEMENTATION_SPEC.md  README.md
.github/workflows/: ci.yml  playwright-tests.yml  publish-pytest-keycloak.yml
docker/: Claude.md  Dockerfile  app.py  docker-compose.yml
keycloak/: .gitignore  README.md  build.sh  pyproject.toml
keycloak/src/pytest_keycloak/: __init__.py  client.py  config.py  exceptions.py  fixtures.py  manager.py
keycloak/tests/: __init__.py  conftest.py  test_client.py  test_fixtures.py  test_manager.py
paneldash/: .env.example  .gitignore  DEVSTART_README.md  README.md  TESTING-SUMMARY.md  TESTING.md  dashboard-specification.md  devstart.py  docker-compose.prod.yml  docker-compose.yml  e2e.env  package-lock.json  package.json  playwright.config.ts  playwright.devstart.config.ts  run-e2e-tests.sh
paneldash/.claude/: claude.md
paneldash/.devcontainer/: devcontainer.json
paneldash/.github/workflows/: ci.yml
paneldash/backend/: README.md  alembic.ini  pyproject.toml  start_backend_dev.sh
paneldash/backend/alembic/: env.py
paneldash/backend/alembic/versions/: 001_initial_migration.py
paneldash/backend/app/: config.py  database.py  main.py
paneldash/backend/app/api/v1/: __init__.py  auth.py  dashboards.py  panels.py  tenants.py  users.py
paneldash/backend/app/auth/: dependencies.py  keycloak.py
paneldash/backend/app/models/: __init__.py  base.py  central.py
paneldash/backend/app/schemas/: __init__.py  config.py  tenant.py  user.py
paneldash/backend/app/services/: config_loader.py  data_aggregator.py  panel_factory.py  query_builder.py
paneldash/backend/scripts/: seed_db.py
paneldash/backend/tests/: conftest.py
paneldash/backend/tests/integration/: test_api.py  test_auth.py  test_dashboards_api.py  test_database.py  test_migrations.py  test_panels_api.py  test_panels_real_data.py  test_tenants_api.py  test_users_api.py
paneldash/backend/tests/unit/: test_config_loader.py  test_data_aggregator.py  test_panel_factory.py  test_query_builder.py
paneldash/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
paneldash/frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
paneldash/frontend/src/: App.tsx  main.tsx
paneldash/frontend/src/api/: client.ts  queries.ts
paneldash/frontend/src/components/: DashboardGrid.tsx  DateFilter.tsx  Header.tsx  ProtectedRoute.tsx  TenantSelector.tsx
paneldash/frontend/src/components/common/: DrillDownModal.tsx
paneldash/frontend/src/components/panels/: HealthStatusPanel.tsx  KPIPanel.tsx  TablePanel.tsx  TimeSeriesPanel.tsx
paneldash/frontend/src/contexts/: AuthContext.tsx  TenantContext.tsx
paneldash/frontend/src/pages/: Admin.tsx  Dashboard.tsx  Health.tsx  Login.tsx
paneldash/frontend/src/tests/api/: client.test.ts
paneldash/frontend/src/tests/components/: DashboardGrid.test.tsx  DateFilter.test.tsx  Health.test.tsx  HealthStatusPanel.test.tsx  KPIPanel.test.tsx  ProtectedRoute.test.tsx  TablePanel.test.tsx  TenantSelector.test.tsx  TimeSeriesPanel.test.tsx
paneldash/frontend/src/types/: react-plotly.d.ts
paneldash/tenants/example-tenant/dashboards/: default.yaml
paneldash/tenants/example-tenant/panels/: cpu_usage.yaml  error_log.yaml  health_status.yaml  memory_kpi.yaml
paneldash/tests/e2e/: README.md  global-setup.ts  global-teardown.ts  health.spec.ts  start-test-db.py
paneldash/tests/e2e/fixtures/: auth.ts  browser-auth-helper.ts  database-helper.ts  jwt-helper.ts  test-keys.ts
paneldash/tests/e2e/future-tests/: admin-user.spec.ts  logged-out.spec.ts  regular-user.spec.ts
paneldash/tests/e2e/specs/: auth-invalid-user.spec.ts  auth-valid-user.spec.ts  dashboard-panels.spec.ts  dashboard-ui.spec.ts  dashboard-with-panels.spec.ts  debug-auth.spec.ts  debug-login-flow.spec.ts  keycloak-login.spec.ts  smoke-test.spec.ts  smoke.spec.ts
paneldash/tests/e2e/wiremock/__files/: public-keys.json
paneldash/tests/e2e/wiremock/mappings/: keycloak-certs.json
playwrite/: README.md  config.toml  pyproject.toml
playwrite/src/hello_world/: server.py
playwrite/tests/: conftest.py  test_hello_world.py
postgres/: automated_setup.sh  claude.md  setup_database.sh
postgres-replication/: CLAUDE.md  README.md  config.toml  pyproject.toml
postgres-replication/src/postgres_manager/: __init__.py  cli.py  config.py  postgres.py  replication.py  schema_evolution.py  server.py
postgres-replication/tests/: conftest.py  test_cli.py  test_config.py  test_connect.py  test_postgres.py  test_replication.py  test_schema_evolution.py  test_server.py
