[project]
name = "hello-world-cli"
version = "0.1.0"
description = "Hello World CLI app with web server and Playwright tests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "click>=8.1.0",
]

[project.scripts]
hello-world = "hello_world.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_world"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.6.0",
    "playwright==1.56.0",
    "ty>=0.0.1a6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ty]
# ty type checker configuration
python-version = "3.11"
