[project]
name = "postgres-replication"
version = "0.1.0"
description = "Manage two PostgreSQL 18 instances for demonstration"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "hatchling>=1.29.0",
    "psycopg[binary]>=3.3.3",
    "tomli-w>=1.2.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
postgres-manager = "postgres_manager.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
